# gcc-mem-system

./: .gitignore  Dockerfile  IMPROVEMENT_PLAN.md  Makefile  README.md  TEST_REPORT.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
src/gcc/core/: commands.py  exceptions.py  git_ops.py  lock.py  storage.py  validators.py
src/gcc/logging/: audit.py  logger.py
src/gcc/mcp/: proxy.py
src/gcc/server/: app.py  config.py  endpoints.py  middleware.py
src/gcc_mcp/: git_ops.py  mcp_proxy.py
src/gcc_skill/: __init__.py  commands.py  git_ops.py  lock.py  mcp_proxy.py  server.py  storage.py
tests/: test_api.py
tests/security/: test_validators.py
tests/test_core/: test_branch_semantics.py  test_time_utc.py
tests/test_logging/: test_audit.py  test_logger.py
tests/test_mcp/: __init__.py  test_session_id.py
