[project]
name = "gcc"
version = "1.0.0"
description = "Unified Git-Context-Controller (GCC) memory system with HTTP API and MCP integration"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.5.0",
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "httpx>=0.27.0"
]

[project.scripts]
# Server entry points
gcc-server = "gcc.server.app:main"

# MCP proxy entry point
gcc-mcp = "gcc.mcp.proxy:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
